# gimbal

./: .gitignore  CMakeLists.txt  package.xml
include/: gimbal_serializer.h
launch/: gimbal_sim.launch  gimbal_tracker.launch
msg/: Gimbal_log.msg
scripts/: gimbal_geo_book.py  gimbal_geopointer.py  gimbal_geopointer_2.py  gimbal_geopointer_gps.py  gimbal_logger.py
src/: gimbal_serializer.cpp  talker.cpp  tracker.cpp
